fixed alignment issues with no-yachts

--- a/resources/css/public/public.css
+++ b/resources/css/public/public.css
@@ -35,9 +35,16 @@
     }
   }
 
+  .no-yacht-error.danzerpress-box {
+    flex: 0 0 100%;
+  }
+
   @media screen and (max-width: 768px) {
     .yacht-boats-container.danzerpress-two-thirds {
         margin: auto;
+    }
+    .no-yacht-error.danzerpress-box {
+        flex: auto;
     }
   } 
   
